third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/add/unit_struct.rs
#[derive(derive_more::Add)]
struct Foo;

fn main() {}
